--- a/pages/index.html
+++ b/pages/index.html
@@ -124,7 +124,7 @@
                   <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">eBazar</span>
               </a>
               <div class="flex items-center">
-                  <a href="tel:5541251234" class="mr-6 text-sm  text-gray-500 dark:text-white hover:underline">+998 99 315 15 16</a>
+                  <a href="tel:+998993151516" class="mr-6 text-sm  text-gray-500 dark:text-white hover:underline">+998 99 315 15 16</a>
                   <a href="#" class="text-sm font-semibold text-blue-600 dark:text-blue-500 hover:underline">Login</a>
               </div>
           </div>
@@ -141,37 +141,51 @@
                       <span class="text-sm text-white font-semibold underline" id="location-user"></span>
                     </div>
                     
-                    <button id="dropdownDividerButton" data-dropdown-toggle="dropdownDivider" class="text-white dark:gray-900 hover:dark:gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-1 text-center inline-flex items-center dark:bg-gray-900 hover:dark:border-indigo-500 dark:focus:ring-white-300 focus:outline-[unset]" type="button">uz <span id="flag"></span></button>
+                    <button id="dropdownDividerButton" data-dropdown-toggle="dropdownDivider" class="text-white dark:gray-900 hover:dark:gray-900 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-2 text-center inline-flex items-center dark:bg-gray-900 hover:dark:border-indigo-500 dark:focus:ring-white-300 focus:outline-[unset]" type="button">
+                      <span id="flag" class="w-full"></span>
+                    </button>
 
                     <!-- Dropdown menu -->
                     <div id="dropdownDivider" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
                       <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDividerButton">
-                        <li>  
-                          <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
+                        <li >  
+                          <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white flex gap-3" id="flag-elements">
+                            <img src="../assets/imgs/uzbekistan.png" alt="" class="w-5 h-5">
+                            <span class="text-white">Uzbekcha</span>
+                          </a>
                         </li>
-                        <li>
-                          <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Settings</a>
+                        <li >
+                          <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white flex gap-3" id="flag-elements">
+                            <img src="../assets/imgs/russia.png" alt="" class="w-5 h-5">
+                            <span class="text-white">Русский</span>
+                          </a>
                         </li>
-                        <li>
-                          <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</a>
+                        <li >
+                          <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white flex gap-3" id="flag-elements">
+                            <img src="../assets/imgs/turkey.png" alt="" class="w-5 h-5">
+                            <span class="text-white">Turkca</span>
+                          </a>
+                        </li>
+                        <li >
+                          <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white flex gap-3" id="flag-elements">
+                            <img src="../assets/imgs/united-kingdom.png" alt="" class="w-5 h-5">
+                            <span class="text-white">English</span>
+                          </a>
                         </li>
                       </ul>
-                      <div class="py-2">
-                        <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Separated link</a>
-                      </div>
                     </div>
                   </div>
                   <ul class="flex flex-row font-medium mt-0 mr-6 space-x-8 text-sm">
-                      <li>
+                      <li >
                           <a href="#" class="text-gray-900 dark:text-white hover:underline" aria-current="page">Home</a>
                       </li>
-                      <li>
+                      <li >
                           <a href="#" class="text-gray-900 dark:text-white hover:underline">Company</a>
                       </li>
-                      <li>
+                      <li >
                           <a href="#" class="text-gray-900 dark:text-white hover:underline">Team</a>
                       </li>
-                      <li>
+                      <li >
                           <a href="#" class="text-gray-900 dark:text-white hover:underline">Features</a>
                       </li>
                   </ul>
